fixed overflow issue during the loader and the images display after the fith line

--- a/src/styles/tiles.scss
+++ b/src/styles/tiles.scss
@@ -15,7 +15,8 @@
 
     .thumbnail{
       display:block;
-      height:auto;
+      position:absolute;
+      height:100%;
       width:100%;
       border-radius: 10px;
       transform: scale(1);
@@ -27,6 +28,7 @@
     }
 
     .thumbnail-wrapper{
+      position:relative;
       border-radius: 10px;
       overflow: hidden;
       min-height:400px;
